--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@tailwindcss/vite": "^4.0.8",
     "cra-template": "1.2.0",
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^19.0.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.5",
@@ -36,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^4.0.8"
   }
 }
